Hack to work around #5
Removed markdown-it-replace-link plugin, doing regex replacement on processed HTML (yikes, I know)

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -410,7 +410,7 @@ blockquote {
 button,
 .button,
 .call-to-action {
-	font: 800 80%/1.2 var(--font-sans);
+	font: 800 .8rem/1.2 var(--font-sans);
 	background: #f06;
 	color: white;
 	padding: .5em .8em;
@@ -439,7 +439,6 @@ button,
 		padding-inline: 1em;
 		text-transform: uppercase;
 		border-radius: 9999px;
-		font-size: 1rem;
 	}
 }
 
