No comments on tag pages

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1410,8 +1410,10 @@ pre:is(pre, [class*="language-"][class*="language-"]) {
 }
 
 [id=toc] {
+	z-index: 1;
 	font-size: 75%;
 	color: var(--color-gray-40);
+	mix-blend-mode: multiply;
 
 	& a {
 		color: inherit;
