Move Bootstrap Icons to separate file

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -1,5 +1,5 @@
 @import url("prism.css");
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
+@import url("bootstrap-icons.css");
 
 *,
 *::before,
@@ -80,17 +80,6 @@
 	}
 
 	--scrolltop: 0; /* Fallback. Actual value updated via JS */
-
-	/* Icons */
-	--icon-date: "\F1F6";
-	--icon-comments: "\F268";
-	--icon-tags: "\F5B2";
-	--icon-edit: "\F4CA";
-	--icon-arrow-left-short: "\F12C";
-	--icon-arrow-right-short: "\F135";
-	--icon-arrow-left-circle: "\F12A";
-	--icon-arrow-right-circle: "\F134";
-	--icon-arrow-down-circle: "\F119";
 }
 
 :nth-child(1) { --index: 1; }
