--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -83,7 +83,7 @@
 
 <footer>
 	<div class="meta">
-		{% from "_tags.njk" import list as tagList %}
+		{% from "_tags.njk" import list as tagList with context %}
 		{{ tagList(tags) }}
 
 		<a href="https://github.com/LeaVerou/lea.verou.me/edit/main{{ page.url }}index.md" class="edit-page">Edit page on GitHub</a>
