--- a/blog/tags-index.njk
+++ b/blog/tags-index.njk
@@ -7,9 +7,9 @@ override:tags: []
 {% import "_tags.njk" as tags %}
 
 <ol class="tags-index subtle-markers">
-{% for tag, posts in collections | taglist %}
-	<li>{{ tags.one(tag) | safe }}
-		<span class="post-count">({{ posts }} posts)</span>
+{% for tag, posts in collections.postsByTag %}
+	<li>{{ tags.one(tag) }}
+		<span class="post-count">({{ posts.length }} posts)</span>
 	</li>
 {% endfor %}
 </ol>
