11ty indices post

--- a/blog/year-index.njk
+++ b/blog/year-index.njk
@@ -10,5 +10,4 @@ eleventyComputed:
 ---
 
 {% import "_posts.njk" as posts %}
-{% set postlist = collections.postsByYear[ year ] | values | flatten %}
-{{ posts.list(postlist, {style: "compact"}) }}
+{{ posts.list(collections.postsByYear[ year ], {style: "compact"}) }}
