Raise page header above main (#12)
Co-authored-by: Lea Verou <lea@verou.me>

--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -472,6 +472,7 @@ button,
 }
 
 body > header {
+	z-index: 1;
 	position: relative;
 	padding: var(--min-padding);
 	--header-bg-center: calc(var(--min-padding) + .75em) calc(2em - var(--scrolltop, 0) * 1px);
