--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -68,8 +68,8 @@
 	You are browsing the <a href="/blog/2023/going-lean/">new, beta version</a> of my website.
 	Some things may not work properly.
 
-	<a href="{{ oldURL }}">View this page on the current website</a>
-	and if you spot any problems, please <a href="{{ pkg.bugs.url }}/new?template=broken page.yml&amp;title=Page regression: {{ title }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
+	<a href="{{ oldURL }}">View this page on the old website</a>
+	and if you spot any problems, please <a href="{{ pkg.bugs.url }}/new?template=broken-page.yml&amp;title=Page regression: {{ title }}&amp;url={{ site.domain }}{{ page.url }}">file an issue</a>!
 </section>
 
 {% if toc %}
