--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -404,7 +404,7 @@ button,
 	font: 800 .8rem/1.2 var(--font-sans);
 	background: #f06;
 	color: white;
-	padding: .5em .8em;
+	padding: .52em .8em .45em;
 	text-decoration: none !important;
 	text-shadow: 0 0 0 white;
 	transition: .3s;
