--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -193,7 +193,7 @@ h5 {
 	color: var(--color-gray-medium);
 }
 
-h4:not(main *),
+h4:not(main > *, .post *),
 .callout::after,
 .warning::after,
 .info::after,
