Show tag aliases in tags index

--- a/_includes/_tags.njk
+++ b/_includes/_tags.njk
@@ -9,8 +9,9 @@
 {% endmacro %}
 
 {% macro one(tag) %}
+{% set aliases = collections.postsByTag[tag].aliases %}
 {% if collections[tag].length > 1 %}
-<a href="/blog/tags/{{ tag }}" title="{{ collections[tag].length - 1 }} other posts with this tag">
+<a href="/blog/tags/{{ tag }}" title="{{ "aka " + aliases | format_tag + ", " if aliases }}{{ collections[tag].length }} posts with this tag" class="tag">
 {{ tag | format_tag }}</a>{% else %}
-<span class="orphan-tag" title="No other posts with this tag">{{ tag | format_tag }}</span>{% endif %}{% endmacro %}
+<span class="tag orphan" title="Only one post with this tag">{{ tag | format_tag }}</span>{% endif %}{% endmacro %}
 
