Use data from own repo

--- a/press/index.njk
+++ b/press/index.njk
@@ -48,7 +48,7 @@ The following is a small sample of the mentions I managed to collect, **very inf
 <p>My work has been featured in nearly every front-end newsletter.
 The following is a small, infrequently updated sample of the mentions I collected.
 
-<div mv-app="newsletters" mv-storage="https://github.com/LeaVerou/leaverou.github.io/blob/master/data.json" mv-bar="no-login">
+<div mv-app="newsletters" mv-storage="https://github.com/LeaVerou/lea.verou.me/blob/main/data/press.json" mv-bar="no-login">
 <details class="newsletter" property="newsletter" mv-multiple="">
 <summary id="[id]">
 	<strong>[count(issue)]</strong>
