--- a/redirects.njk
+++ b/redirects.njk
@@ -26,5 +26,5 @@ eleventyExcludeFromCollections: true
 /incrementable/* https://incrementable.verou.me/:splat 301
 
 # Tag aliases
-{% for alias, tag in tag_aliases %}/tags/{{ alias }}/ /tags/{{ tag }}/ 301
+{% for alias, tag in tag_aliases %}/blog/tags/{{ alias }}/ /blog/tags/{{ tag }}/ 301
 {% endfor %}
