--- a/blog/tags.njk
+++ b/blog/tags.njk
@@ -15,9 +15,7 @@
 		alias: "tag",
 	},
 	permalink: "/blog/tags/{{ tag }}/",
-	override: {
-		tags: []
-	},
+	"override:tags": [],
 	eleventyComputed: {
 		title: "{{ collections[ tag ].length | pluralize('post') }} on {{ tag | format_tag }}"
 	}
