--- a/assets/style.postcss
+++ b/assets/style.postcss
@@ -735,6 +735,12 @@ body > footer {
 		}
 	}
 
+	.reading-time {
+		&::before {
+			content: var(--icon-stopwatch);
+		}
+	}
+
 	.edit-page {
 		&::before {
 			content: var(--icon-edit);
