Credits page & licensing

--- a/_includes/page.njk
+++ b/_includes/page.njk
@@ -115,8 +115,8 @@
 	</nav>
 
 	<small>
-		<div class="copyright">&copy;2009&ndash;{{ currentYear }} Lea Verou</div>
-		<div class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, hosted by <a href="https://netlify.com">Netlify</span></div>
+		<a href="/credits/#licensing" title="Licensing details" class="copyright">&copy;2009&ndash;{{ currentYear }} Lea Verou</a>
+		<div class="credits">Powered by <a href="https://11ty.dev/">Eleventy</a>, <a href="https://netlify.com">Netlify, and </span> <a href="/credits/">more</a></div>
 		<a href="#" class="to-top">
 			<span class="long-text">To the top</span>
 			<span class="short-text">Up</span>
