--- a/assets/bootstrap-icons.css
+++ b/assets/bootstrap-icons.css
@@ -6,6 +6,7 @@
 	--icon-arrow-left-circle: "\F12A";
 	--icon-arrow-right-circle: "\F134";
 	--icon-arrow-down-circle: "\F119";
+	--icon-clipboard2-check-fill: "\F724";
 	--icon-comments: "\F268";
 	--icon-date: "\F1F6";
 	--icon-edit: "\F4CA";
